--- a/_includes/_gallery.html
+++ b/_includes/_gallery.html
@@ -35,88 +35,88 @@
 
 
 <div id="links">
-	<a href="images/gallery/1.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/1_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/1.jpeg" title="" data-gallery>
+		<img src="images/gallery/1_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/2.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/2_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/2.jpeg" title="" data-gallery>
+		<img src="images/gallery/2_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/3.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/3_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/3.jpeg" title="" data-gallery>
+		<img src="images/gallery/3_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/4.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/4_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/4.jpeg" title="" data-gallery>
+		<img src="images/gallery/4_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/5.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/5_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/5.jpeg" title="" data-gallery>
+		<img src="images/gallery/5_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/6.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/6_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/6.jpeg" title="" data-gallery>
+		<img src="images/gallery/6_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/7.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/7_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/7.jpeg" title="" data-gallery>
+		<img src="images/gallery/7_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/3.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/3_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/3.jpeg" title="" data-gallery>
+		<img src="images/gallery/3_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/8.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/8_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/8.jpeg" title="" data-gallery>
+		<img src="images/gallery/8_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/9.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/9_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/9.jpeg" title="" data-gallery>
+		<img src="images/gallery/9_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/10.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/10_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/10.jpeg" title="" data-gallery>
+		<img src="images/gallery/10_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/11.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/11_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/11.jpeg" title="" data-gallery>
+		<img src="images/gallery/11_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/12.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/12_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/12.jpeg" title="" data-gallery>
+		<img src="images/gallery/12_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/13.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/13_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/13.jpeg" title="" data-gallery>
+		<img src="images/gallery/13_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/14.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/14_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/14.jpeg" title="" data-gallery>
+		<img src="images/gallery/14_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/15.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/15_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/15.jpeg" title="" data-gallery>
+		<img src="images/gallery/15_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/16.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/16_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/16.jpeg" title="" data-gallery>
+		<img src="images/gallery/16_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/17.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/17_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/17.jpeg" title="" data-gallery>
+		<img src="images/gallery/17_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/18.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/18_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/18.jpeg" title="" data-gallery>
+		<img src="images/gallery/18_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/19.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/19_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/19.jpeg" title="" data-gallery>
+		<img src="images/gallery/19_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/20.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/20_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/20.jpeg" title="" data-gallery>
+		<img src="images/gallery/20_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/21.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/21_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/21.jpeg" title="" data-gallery>
+		<img src="images/gallery/21_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/22.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/22_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/22.jpeg" title="" data-gallery>
+		<img src="images/gallery/22_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/24.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/24_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/24.jpeg" title="" data-gallery>
+		<img src="images/gallery/24_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/25.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/25_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/25.jpeg" title="" data-gallery>
+		<img src="images/gallery/25_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/26.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/26_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/26.jpeg" title="" data-gallery>
+		<img src="images/gallery/26_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/27.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/27_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/27.jpeg" title="" data-gallery>
+		<img src="images/gallery/27_tn.jpg" alt=""/>
 	</a>
-	<a href="images/gallery/28.jpeg" title="Banana" data-gallery>
-		<img src="images/gallery/28_tn.jpg" alt="Banana"/>
+	<a href="images/gallery/28.jpeg" title="" data-gallery>
+		<img src="images/gallery/28_tn.jpg" alt=""/>
 	</a>
 </div>
