--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<title>{{ page.title }}</title>
+<title>{{ site.title }}</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/revolution-slider.css" rel="stylesheet">
