--- a/_includes/_menu.html
+++ b/_includes/_menu.html
@@ -15,15 +15,14 @@
 		    <div class="navbar-collapse collapse clearfix">
 			  <ul class="navigation clearfix">
 				<li class="current"><a href="#">Prima pagina</a></li>
-				<li><a href="about.html">Despre noi</a></li>
-				<li><a href="services.html">Servicii prestate</a></li>
-				<li><a href="#">Proiecte</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="#despre">Despre noi</a></li>
+				<li><a href="#servicii">Servicii prestate</a></li>
+				<li><a href="#proiecte">Proiecte</a></li>
 			  </ul>
 		    </div>
 		</nav><!-- Main Menu End-->
 
-	    <div class="btn-outer"><a href="#" class="theme-btn inq-btn"><span class="txt">inquery today</span></a></div>
+	    <div class="btn-outer"><a href="tel:+40720372299" class="theme-btn inq-btn"><span class="txt">Contacteaza-ne!</span></a></div>
 
 	  </div>
     </div>
