--- a/_includes/_skills.html
+++ b/_includes/_skills.html
@@ -1,5 +1,5 @@
 <!--What We Do Section-->
-<section class="what-we-do no-padd-bottom">
+<section class="what-we-do no-padd-bottom" id="servicii">
   <div class="auto-container">
 	  <!--Section Title-->
 	  <div class="sec-title text-center">
