--- a/_includes/_team.html
+++ b/_includes/_team.html
@@ -1,5 +1,5 @@
 <!--Team Section-->
-<section class="team-section">
+<section class="team-section" id="despre">
   <div class="auto-container">
 	  <!--Section Title-->
 	  <div class="sec-title text-center">
@@ -9,10 +9,10 @@
 	  <div class="row clearfix">
 
 		<!--Team Memmber-->
-		<article class="team-member col-lg-4 col-md-6 col-sm-6 col-xs-12">
+		<article class="team-member col-lg-6 col-md-6 col-sm-6 col-xs-12">
 		  <div class="inner-box">
 
-			  <figure class="image-box wow bounceInUp" data-wow-delay="0ms" data-wow-duration="1500ms"><a href="mailto:mail@mail.com"><img src="images/resource/team-image-1.png" alt=""></a></figure>
+			  <figure class="image-box wow bounceInUp" data-wow-delay="0ms" data-wow-duration="1500ms"><img src="images/resource/team-image-1.png" alt=""></figure>
 			  <!--Lower Part-->
 			  <div class="lower-part">
 				  <!--Bg Layer-->
@@ -22,12 +22,12 @@
 				<!--Caption Layer-->
 				<div class="caption-layer">
 				  <div class="upper">
-					  <h3><a href="#">Farhan Rizvi</a></h3>
-					  <div class="category"><a href="#">Chief Architect</a></div>
+					  <h3><a href="#">Patakfalvi Zsolt</a></h3>
+					  <div class="category"><a href="#">Tehnician in constructii</a></div>
 				    </div>
 				    <ul class="options clearfix">
-					  <li><a href="#"><span class="icon flaticon-case"></span> 3 Years of experiences</a></li>
-					  <li><a href="#"><span class="icon flaticon-social"></span> age: 24 years</a></li>
+					  <li><a href="#"><span class="icon flaticon-case"></span> 7 ani experienta</a></li>
+					  <li><a href="#"><span class="icon flaticon-social"></span> varsta: 24 ani</a></li>
 				    </ul>
 				</div><!--Caption ayer-->
 			  </div><!--Lower Part-->
@@ -36,10 +36,10 @@
 		</article>
 
 		<!--Team Memmber-->
-		<article class="team-member col-lg-4 col-md-6 col-sm-6 col-xs-12">
+		<article class="team-member col-lg-6 col-md-6 col-sm-6 col-xs-12">
 		  <div class="inner-box">
 
-			  <figure class="image-box wow bounceInUp" data-wow-delay="500ms" data-wow-duration="1500ms"><a href="mailto:mail@mail.com"><img src="images/resource/team-image-2.png" alt=""></a></figure>
+			  <figure class="image-box wow bounceInUp" data-wow-delay="500ms" data-wow-duration="1500ms"><img src="images/resource/team-image-2.png" alt=""></figure>
 			  <!--Lower Part-->
 			  <div class="lower-part">
 				  <!--Bg Layer-->
@@ -49,39 +49,12 @@
 				<!--Caption Layer-->
 				<div class="caption-layer">
 				  <div class="upper">
-					  <h3><a href="#">Bushra Ahsani</a></h3>
-					  <div class="category"><a href="#">Interior Designer</a></div>
+					  <h3><a href="#">Marton Levente</a></h3>
+					  <div class="category"><a href="#">Tehnician in instalatii</a></div>
 				    </div>
 				    <ul class="options clearfix">
-					  <li><a href="#"><span class="icon flaticon-case"></span> 3 Years of experiences</a></li>
-					  <li><a href="#"><span class="icon flaticon-social"></span> age: 24 years</a></li>
-				    </ul>
-				</div><!--Caption ayer-->
-			  </div><!--Lower Part-->
-
-		    </div>
-		</article>
-
-		<!--Team Memmber-->
-		<article class="team-member col-lg-4 col-md-6 col-sm-6 col-xs-12">
-		  <div class="inner-box">
-
-			  <figure class="image-box wow bounceInUp" data-wow-delay="1000ms" data-wow-duration="1500ms"><a href="mailto:mail@mail.com"><img src="images/resource/team-image-3.png" alt=""></a></figure>
-			  <!--Lower Part-->
-			  <div class="lower-part">
-				  <!--Bg Layer-->
-				  <div class="bg-layer"></div>
-				<div class="left-curve"></div>
-				<div class="right-curve"></div>
-				<!--Caption Layer-->
-				<div class="caption-layer">
-				  <div class="upper">
-					  <h3><a href="#">David Maman</a></h3>
-					  <div class="category"><a href="#">Exterior Designer</a></div>
-				    </div>
-				    <ul class="options clearfix">
-					  <li><a href="#"><span class="icon flaticon-case"></span> 3 Years of experiences</a></li>
-					  <li><a href="#"><span class="icon flaticon-social"></span> age: 24 years</a></li>
+					  <li><a href="#"><span class="icon flaticon-case"></span> 10 ani experienta</a></li>
+					  <li><a href="#"><span class="icon flaticon-social"></span> varsta: 28 ani</a></li>
 				    </ul>
 				</div><!--Caption ayer-->
 			  </div><!--Lower Part-->
