--- a/_includes/homepage/_intro_banner.html
+++ b/_includes/homepage/_intro_banner.html
@@ -9,12 +9,12 @@
 				  <div class="col-md-7 col-sm-12">
 				    <h3>Programeaza o intalnire</h3>
 				    <div class="text">
-					    Poti sa ne scrii sau ne poti suna pentru a stabili o intalnire.
+					    Suntem mereu disponibili
 				    </div>
 				</div>
 				<div class="col-md-5 col-sm-12 pull-right">
 					<div class="text-right padd-top-20">
-						<a href="/contact.html" class="theme-btn btn-style-three">Contacteaza-ne <span class="icon icon-right flaticon-arrows-10"></span></a>
+						<a href="tel:+40720372299" class="theme-btn btn-style-three">Contacteaza-ne <span class="icon icon-right flaticon-arrows-10"></span></a>
 					</div>
 				</div>
 			  </div>
