--- a/_includes/homepage/_services.html
+++ b/_includes/homepage/_services.html
@@ -2,7 +2,7 @@
   <div class="auto-container">
 	  <!--Section Title-->
 	  <div class="sec-title text-center">
-		  <h2><span class="theme_color">quick-install</span></h2>
+		  <h2><span class="theme_color">Profesionisti in instalatii</span></h2>
 	  </div>
 
 	  <div class="row clearfix">
