--- a/_includes/_banner.html
+++ b/_includes/_banner.html
@@ -5,7 +5,7 @@
 	    <div class="pull-left logo-outer">
 		    <div class="logo">
 			    <a href="index.html">
-				    <img src="images/logo-1.png" alt="" title="{{site.title}}">
+				    <img src="images/logo.png" alt="" title="{{site.title}}">
 			    </a>
 		    </div>
 		</div>
@@ -20,17 +20,6 @@
 				<li><a href="tel:+40720372299"><strong>0720 372 299</strong></a></li>
 			  </ul>
 		    </div>
-
-		    <!--Info Box-->
-		    <div class="upper-column info-box">
-			    <div class="icon-box"><span class="flaticon-letter-1"></span></div>
-			  <ul>
-			    <li><span class="small-title">Email</span></li>
-				<li><a href="mailto:{{ site.email }}"><strong>{{ site.email }}</strong></a></li>
-			  </ul>
-		    </div>
-
-
 		</div>
 
 	  </div>
