--- a/_includes/_projects_carousel.html
+++ b/_includes/_projects_carousel.html
@@ -1,5 +1,5 @@
 <!--Latest Work-->
-<section class="latest-work">
+<section class="latest-work" id="proiecte">
   <div class="auto-container">
 	  <!--Section Title-->
 	  <div class="sec-title text-center">
@@ -21,10 +21,6 @@
 					  <h3><a href="#">Cabina de dus cu rigola</a></h3>
 					  <div class="category"><a href="#">Sanitare</a></div>
 				    </div>
-				    <ul class="options clearfix">
-					  <li><a href="#"><span class="icon flaticon-money"></span> Budget:  $10,000</a></li>
-					  <li><a href="#"><span class="icon flaticon-vehicle"></span> Duration: 2 months</a></li>
-				    </ul>
 				</div>
 			  </div>
 		    </div>
@@ -41,10 +37,6 @@
 					  <h3><a href="#">WC &amp; bideu incastrat</a></h3>
 					  <div class="category"><a href="#">Sanitare</a></div>
 				    </div>
-				    <ul class="options clearfix">
-					  <li><a href="#"><span class="icon flaticon-money"></span> Budget:  $10,000</a></li>
-					  <li><a href="#"><span class="icon flaticon-vehicle"></span> Duration: 2 months</a></li>
-				    </ul>
 				</div>
 			  </div>
 		    </div>
@@ -61,10 +53,6 @@
 					  <h3><a href="#">Legatura centrala</a></h3>
 					  <div class="category"><a href="#">Termice</a></div>
 				    </div>
-				    <ul class="options clearfix">
-					  <li><a href="#"><span class="icon flaticon-money"></span> Budget:  $10,000</a></li>
-					  <li><a href="#"><span class="icon flaticon-vehicle"></span> Duration: 2 months</a></li>
-				    </ul>
 				</div>
 			  </div>
 		    </div>
@@ -81,10 +69,6 @@
 					  <h3><a href="#">Automatizare incalzire pardoseala</a></h3>
 					  <div class="category"><a href="#">Termice</a></div>
 				    </div>
-				    <ul class="options clearfix">
-					  <li><a href="#"><span class="icon flaticon-money"></span> Budget:  $10,000</a></li>
-					  <li><a href="#"><span class="icon flaticon-vehicle"></span> Duration: 2 months</a></li>
-				    </ul>
 				</div>
 			  </div>
 		    </div>
@@ -101,10 +85,6 @@
 					  <h3><a href="#">Dedurizator &amp; statie epurare</a></h3>
 					  <div class="category"><a href="#">Sanitare</a></div>
 				    </div>
-				    <ul class="options clearfix">
-					  <li><a href="#"><span class="icon flaticon-money"></span> Budget:  $10,000</a></li>
-					  <li><a href="#"><span class="icon flaticon-vehicle"></span> Duration: 2 months</a></li>
-				    </ul>
 				</div>
 			  </div>
 		    </div>
