--- a/_includes/_menu.html
+++ b/_includes/_menu.html
@@ -15,9 +15,9 @@
 		    <div class="navbar-collapse collapse clearfix">
 			  <ul class="navigation clearfix">
 				<li class="current"><a href="#">Prima pagina</a></li>
-				<li><a href="#despre">Despre noi</a></li>
-				<li><a href="#servicii">Servicii prestate</a></li>
-				<li><a href="#proiecte">Proiecte</a></li>
+				<li><a href="http://quick-install.ro/#despre">Despre noi</a></li>
+				<li><a href="http://quick-install.ro/#servicii">Servicii prestate</a></li>
+				<li><a href="http://quick-install.ro/#proiecte">Proiecte</a></li>
 			  </ul>
 		    </div>
 		</nav><!-- Main Menu End-->
