--- a/_includes/_skills.html
+++ b/_includes/_skills.html
@@ -45,7 +45,7 @@
 						  <div class="content-area">
 						  <h3>Instalatii sanitare</h3>
 						    <div class="text">
-							  <p>Montând instalaţiile de încălzire dorim să vă fie asigurată temperatura optimă în toate încăperile(locuinţei).</p>
+							  <p>Va oferim o gama larga pentru instalatia Sanitara</p>
 						    </div>
 
 						    <div class="progress-boxes">
@@ -101,7 +101,7 @@
 						  <div class="content-area">
 						  <h3>Instalatii termice</h3>
 						    <div class="text">
-							  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nstrud exercitation ullamco laboris nisi ut aliquip</p>
+							  <p>Montând instalaţiile de încălzire dorim să vă fie asigurată temperatura optimă în toate încăperile(locuinţei).</p>
 						    </div>
 
 						    <div class="progress-boxes">
