--- a/_includes/_team.html
+++ b/_includes/_team.html
@@ -9,7 +9,7 @@
 	  <div class="row clearfix">
 
 		<!--Team Memmber-->
-		<article class="team-member col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<article class="team-member col-lg-4 col-md-6 col-sm-6 col-xs-12">
 		  <div class="inner-box">
 
 			  <figure class="image-box wow bounceInUp" data-wow-delay="0ms" data-wow-duration="1500ms"><img src="images/resource/team-image-1.png" alt=""></figure>
@@ -36,7 +36,7 @@
 		</article>
 
 		<!--Team Memmber-->
-		<article class="team-member col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<article class="team-member col-lg-4 col-md-6 col-sm-6 col-xs-12">
 		  <div class="inner-box">
 
 			  <figure class="image-box wow bounceInUp" data-wow-delay="500ms" data-wow-duration="1500ms"><img src="images/resource/team-image-2.png" alt=""></figure>
@@ -55,6 +55,34 @@
 				    <ul class="options clearfix">
 					  <li><a href="#"><span class="icon flaticon-case"></span> 10 ani experienta</a></li>
 					  <li><a href="#"><span class="icon flaticon-social"></span> varsta: 28 ani</a></li>
+				    </ul>
+				</div><!--Caption ayer-->
+			  </div><!--Lower Part-->
+
+		    </div>
+		</article>
+		</article>
+
+		<!--Team Memmber-->
+		<article class="team-member col-lg-4 col-md-6 col-sm-6 col-xs-12">
+		  <div class="inner-box">
+
+			  <figure class="image-box wow bounceInUp" data-wow-delay="500ms" data-wow-duration="1500ms"><img src="images/resource/team-image-2.png" alt=""></figure>
+			  <!--Lower Part-->
+			  <div class="lower-part">
+				  <!--Bg Layer-->
+				  <div class="bg-layer"></div>
+				<div class="left-curve"></div>
+				<div class="right-curve"></div>
+				<!--Caption Layer-->
+				<div class="caption-layer">
+				  <div class="upper">
+					  <h3><a href="#">Simeny Mozes</a></h3>
+					  <div class="category"><a href="#">Instalator</a></div>
+				    </div>
+				    <ul class="options clearfix">
+					  <li><a href="#"><span class="icon flaticon-case"></span> 6 ani experienta</a></li>
+					  <li><a href="#"><span class="icon flaticon-social"></span> varsta: 24 ani</a></li>
 				    </ul>
 				</div><!--Caption ayer-->
 			  </div><!--Lower Part-->
